Fixed Issue #6 & #7
Grid - Fixed Footer Row height - to take account of Scrollbar Width
       Added Method to determine Vertical & Horizonal scrollbar visibility
       to fix - ScrollCellIntoView
       Event Handlers are marked Protected and RegisterEvents methods are
       also marked as protected

Documentation - added text/description for Grid , Column and DataTable class

--- a/src/css/plugin/headercellmenuplugin.css
+++ b/src/css/plugin/headercellmenuplugin.css
@@ -24,12 +24,12 @@
 .pear-grid-header-cell-menu-title-content ,
 .pear-grid-header-cell-menu-title-close{
   display: inline-block;
-  
   color: #ffffff;
 }
 
 .pear-grid-header-cell-menu-title-close{
   float:right;
+  cursor: pointer;
 }
 
 .pear-grid-header-cell-menu-title-filter{
